[project]
name = "ara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "arrow>=1.3.0",
    "cloudpickle>=3.0.0",
    "construct",
    "cryptography>=43.0.1",
    "great-tables>=0.4.0",
    "ipython>=8.12.3",
    "lz4>=4.3.3",
    "numpy>=1.24.4",
    "polars>=1.8.2",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.0.0",
    "ruamel-yaml>=0.18.6",
    "xlsxwriter>=3.2.0",
]


